--- a/axelor-core/src/main/resources/views/User.xml
+++ b/axelor-core/src/main/resources/views/User.xml
@@ -1,62 +1,68 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<object-views xmlns="http://apps.axelor.com/xml/ns/object-views" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_2.0.xsd">
+<object-views xmlns="http://apps.axelor.com/xml/ns/object-views"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_2.1.xsd">
 
-	<selection name="select.language">
-    	<option value="en">English</option>
-    	<option value="fr">French</option>
-  	</selection>
-  
-    <grid name="user-grid" title="Users" model="com.axelor.auth.db.User">
-        <field name="name"/>
-        <field name="code"/>
-        <field name="email"/>
-		<field name="language"/>
-		<field name="group"/>
-    </grid>
-    
-    <form name="user-form" title="User" model="com.axelor.auth.db.User" cols="1" onSave="com.axelor.auth.AuthService:validate"
-        onLoad="com.axelor.auth.AuthService:preferences">
-        <group title="General Info">
-            <field name="name" placeholder="user name" validIf="name.length &gt;= 2" onChange="action-condition-user-validName"/>
-            <field name="group" placeholder="user group"/>
-            <field name="code" placeholder="login name" validIf="code.length &gt;= 2" onChange="action-condition-user-validCode"/>
-            <field name="change" widget="inline-checkbox" title="Change password?" showIf="id &amp;&amp; !$readonly()"/>
-            <break/>
-            <field name="newPassword" title="Password" placeholder="new password" widget="password" showIf="change || !id"
-              requiredIf="!id" validIf="(!change &amp;&amp; id) || (newPassword.length &gt;= 4 &amp;&amp; confirm == newPassword)"/>
-            <field name="confirm" showTitle="false" placeholder="confirm password" widget="password" colSpan="2" showIf="change || !id"/>
-        </group>
-        <group title="Authorization">
-            <field name="blocked"/>
-            <break/>
-            <field name="activateOn" validIf="!activateOn || (activateOn &amp;&amp; !expiresOn) || (activateOn &amp;&amp; expiresOn &amp;&amp; $moment(expiresOn) &gt;= $moment(activateOn))"/>
-        	<field name="expiresOn" validIf="!expiresOn || (!activateOn &amp;&amp; expiresOn) || (activateOn &amp;&amp; expiresOn &amp;&amp; $moment(expiresOn) &gt;= $moment(activateOn))"/>
-        </group>
-        <group title="Preferences">
-			<field name="email" widget="Email" />
-			<field name="language" />
-			<field name="homeAction" x-bind="{{__actionSelect.name}}" hidden="true"/>
-            <field name="__actionSelect" title="Action" x-target="com.axelor.meta.db.MetaAction" x-target-name="name" x-domain="self.type = 'action-view'" widget="SuggestBox" canNew="false"/>
-        </group>
-        <field name="roles" grid-view="role-grid" form-view="role-form" />
-        <field name="permissions"/>
-    </form>
-    
-	<form name="user-preferences-form" title="Preferences" model="com.axelor.auth.db.User" cols="2" colWidths="100,*"
-		onNew="com.axelor.auth.AuthService:preferences">
-		<field name="email" widget="Email" />
-		<field name="language" />
-        <field name="homeAction" x-bind="{{__actionSelect.name}}" hidden="true"/>
-		<field name="__actionSelect" title="Action" x-target="com.axelor.meta.db.MetaAction" x-target-name="name" x-domain="self.type = 'action-view'" widget="SuggestBox" canNew="false"/>
-	</form>
-	
-    <action-condition name="action-condition-user-validCode">
-        <check error="Code length should be greater than 2." field="code" if="code?.length() &lt; 2"/>
-    </action-condition>
-    
-    <action-condition name="action-condition-user-validName">
-        <check error="Name length should be greater than 2." field="name" if="name?.length() &lt; 2"/>
-    </action-condition>
-    
+  <selection name="select.language">
+    <option value="en">English</option>
+    <option value="fr">French</option>
+  </selection>
+
+  <grid name="user-grid" title="Users" model="com.axelor.auth.db.User">
+    <field name="name"/>
+    <field name="code"/>
+    <field name="email"/>
+    <field name="language"/>
+    <field name="group"/>
+  </grid>
+
+  <form name="user-form" title="User" model="com.axelor.auth.db.User" onSave="com.axelor.auth.AuthService:validate"
+    onLoad="com.axelor.auth.AuthService:preferences">
+    <panel title="Overview">
+      <field name="name" placeholder="user name" onChange="action-condition-user-validName" validIf="name.length >= 2"/>
+      <field name="code" placeholder="login name" onChange="action-condition-user-validCode" validIf="code.length >= 2"/>
+      <field name="group" placeholder="user group"/>
+      <field name="email" widget="Email"/>
+      <field name="language"/>
+      <panel x-stacked="true">
+        <field name="homeAction" hidden="true" x-bind="{{__actionSelect.name}}"/>
+        <field name="__actionSelect" title="Action" widget="SuggestBox" canNew="false" x-target="com.axelor.meta.db.MetaAction" x-target-name="name" x-domain="self.type = 'action-view'"/>
+      </panel>
+    </panel>
+    <panel title="Authorization">
+      <field name="activateOn" validIf="!activateOn || (activateOn &amp;&amp; !expiresOn) || (activateOn &amp;&amp; expiresOn &amp;&amp; $moment(expiresOn) >= $moment(activateOn))"/>
+      <field name="expiresOn" validIf="!expiresOn || (!activateOn &amp;&amp; expiresOn) || (activateOn &amp;&amp; expiresOn &amp;&amp; $moment(expiresOn) >= $moment(activateOn))"/>
+      <field name="blocked"/>
+      <field name="change" title="Change password?" showIf="id &amp;&amp; !$readonly()" widget="boolean"/>
+      <panel x-span="12" showIf="change || !id" >
+        <field name="newPassword" title="Password" placeholder="new password" widget="password" requiredIf="!id" validIf="(!change &amp;&amp; id) || (newPassword.length >= 4 &amp;&amp; confirm == newPassword)"/>
+        <field name="confirm" title="Confirm" placeholder="confirm password" widget="password"/>
+      </panel>
+    </panel>
+    <panel-tabs>
+      <panel-related field="roles" form-view="role-form" grid-view="role-grid"/>
+      <panel-related field="permissions"/>
+    </panel-tabs>
+  </form>
+
+  <form name="user-preferences-form" title="Preferences" model="com.axelor.auth.db.User"
+    onNew="com.axelor.auth.AuthService:preferences">
+    <panel title="User preferences" x-item-span="12">
+      <field name="email" widget="Email"/>
+      <field name="language"/>
+      <panel x-stacked="true">
+        <field name="homeAction" hidden="true" x-bind="{{__actionSelect.name}}"/>
+        <field name="__actionSelect" title="Action" widget="SuggestBox" canNew="false" x-target="com.axelor.meta.db.MetaAction" x-target-name="name" x-domain="self.type = 'action-view'"/>
+      </panel>
+    </panel>
+  </form>
+
+  <action-condition name="action-condition-user-validCode">
+    <check error="Code length should be greater than 2." field="code" if="code?.length() &lt; 2"/>
+  </action-condition>
+
+  <action-condition name="action-condition-user-validName">
+    <check error="Name length should be greater than 2." field="name" if="name?.length() &lt; 2"/>
+  </action-condition>
+
 </object-views>
