--- a/axelor-core/src/main/resources/views/Permission.xml
+++ b/axelor-core/src/main/resources/views/Permission.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <object-views xmlns="http://apps.axelor.com/xml/ns/object-views"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views
-  http://apps.axelor.com/xml/ns/object-views/object-views_2.0.xsd">
+  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_2.1.xsd">
 
   <grid title="Permissions" name="permission-grid" model="com.axelor.auth.db.Permission">
-    <field name="name"/>
-    <field name="object"/>
-    <field name="canRead" width="100"/>
-    <field name="canWrite" width="100"/>
-    <field name="canCreate" width="100"/>
-    <field name="canRemove" width="100"/>
-    <field name="canExport" width="100"/>
+    <field name="name" />
+    <field name="object" />
+    <field name="canRead" width="100" />
+    <field name="canWrite" width="100" />
+    <field name="canCreate" width="100" />
+    <field name="canRemove" width="100" />
+    <field name="canExport" width="100" />
   </grid>
 
-  <form title="Permission" name="permission-form" model="com.axelor.auth.db.Permission" cols="2" colWidths="*,175">
-    <group title="General" cols="2" colWidths="100,*">
-        <field name="name"/>
-        <field name="object"/>
-    </group>
-    <group title="Allow" cols="3">
-        <field name="canRead" widget="inline-checkbox"/>
-        <field name="canWrite" widget="inline-checkbox"/>
-        <field name="canCreate" widget="inline-checkbox"/>
-        <field name="canRemove" widget="inline-checkbox"/>
-        <field name="canExport" widget="inline-checkbox"/>
-    </group>
-    <group title="Condition" colSpan="2" cols="2" colWidths="100,*">
-        <field name="condition" title="Condition"/>
-        <field name="conditionParams" title="Params"/>
-    </group>
+  <form title="Permission" name="permission-form" model="com.axelor.auth.db.Permission">
+    <panel title="Overview">
+      <field name="name" />
+      <field name="object" />
+    </panel>
+    <panel title="Allow" x-item-span="2">
+      <field name="canRead" widget="inline-checkbox" />
+      <field name="canWrite" widget="inline-checkbox" />
+      <field name="canCreate" widget="inline-checkbox" />
+      <field name="canRemove" widget="inline-checkbox" />
+      <field name="canExport" widget="inline-checkbox" />
+    </panel>
+    <panel title="Condition" x-item-span="12">
+      <field name="condition" title="Condition" />
+      <field name="conditionParams" title="Params" />
+    </panel>
   </form>
 
 </object-views>
