--- a/axelor-core/src/main/resources/views/Schedules.xml
+++ b/axelor-core/src/main/resources/views/Schedules.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <object-views xmlns="http://apps.axelor.com/xml/ns/object-views"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_2.0.xsd">
+  xsi:schemaLocation="http://apps.axelor.com/xml/ns/object-views http://apps.axelor.com/xml/ns/object-views/object-views_2.1.xsd">
 
   <grid name="meta-schedule-grid" title="Schedules" model="com.axelor.meta.db.MetaSchedule" editable="true">
     <field name="name" />
@@ -10,28 +10,29 @@
     <field name="active" />
   </grid>
 
-  <form name="meta-schedule-form" title="Schedule" model="com.axelor.meta.db.MetaSchedule" cols="2" colWidths="*,200">
-    <group title="Job Details" cols="4">
+  <form name="meta-schedule-form" title="Schedule" model="com.axelor.meta.db.MetaSchedule">
+    <panel title="Overview">
       <field name="name"/>
       <field name="active"/>
-      <field name="description" colSpan="4"/>
-      <field name="job" colSpan="4"/>
-      <field name="cron" colSpan="4"/>
-    </group>
-    <group title="Actions" cols="1">
-      <button name="btnValidate" title="Validate" onClick="com.axelor.quartz.JobRunner:validate(cron)"/>
-      <button name="btnRestart" title="Restart jobs..." prompt="This may terminate any running jobs. Are sure to continue?" onClick="com.axelor.quartz.JobRunner:restart()"/>
-    </group>
-    <field name="params">
-      <grid edit-icon="true" title="Params" editable="true">
-        <field name="name"/>
-        <field name="value"/>
-      </grid>
-      <form title="Param">
-        <field name="name"/>
-        <field name="value"/>
-      </form>
-    </field>
+      <field name="description" x-span="12"/>
+      <field name="job" x-span="12"/>
+      <field name="cron" x-span="12"/>
+      <button-group x-span="4">
+        <button name="btnValidate" title="Validate" onClick="com.axelor.quartz.JobRunner:validate(cron)"/>
+        <button name="btnRestart" title="Restart jobs..." prompt="This may terminate any running jobs. Are sure to continue?" onClick="com.axelor.quartz.JobRunner:restart()"/>
+      </button-group>
+    </panel>
+    <panel-related field="params" editable="true">
+      <field name="name"/>
+      <field name="value"/>
+    </panel-related>
+  </form>
+  
+  <form name="meta-schedule-param-form" title="MetaScheduleParam" model="com.axelor.meta.db.MetaScheduleParam" css="mini-form">
+    <panel title="Overview">
+      <field name="name"/>
+      <field name="value"/>
+    </panel>
   </form>
 
 </object-views>
