--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -24,10 +24,10 @@
           <button class="btn" ng-if="hasHelp()" ng-click="onShowHelp()"><i class="fa fa-info-circle"></i></button>
         </div>
         <div ui-menu-bar menus="toolmenu" handler="this"></div>
-        <div class="btn-group" ng-if="toolbar" ui-btn-group-helper>
+        <div class="btn-group" ng-if="toolbar">
           <button ng-repeat="btn in toolbar | filter:{custom: true}" ui-tool-button></button>
         </div>
-        <div class="btn-group" ng-if="toolbar" ui-btn-group-helper style="display: none;">
+        <div class="btn-group" ng-if="toolbar" style="display: none;">
           <button ng-repeat="btn in toolbar | filter:{custom: false}" ui-tool-button></button>
         </div>
         <div ui-menu-bar menus="menubar" handler="this"></div>
