Added margin between x-stacked panel items.

--- a/axelor-web/src/main/webapp/css/view.form.panels.css
+++ b/axelor-web/src/main/webapp/css/view.form.panels.css
@@ -111,6 +111,12 @@
 .panel .row-fluid:last-child > .form-item {
 	margin-bottom: 0;
 }
+.panel[x-stacked] .row-fluid:last-child > .form-item {
+	margin-bottom: 6px;
+}
+.panel[x-stacked] .row-fluid:last-child > .form-item:last-child {
+	margin-bottom: 0;
+}
 
 @media (max-width: 767px) {
 	.panel .row-fluid:last-child > .form-item {
