--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -24,7 +24,8 @@
           <button class="btn" ng-if="hasHelp()" ng-click="onShowHelp()"><i class="fa fa-info-circle"></i></button>
         </div>
         <div ui-menu-bar menus="toolmenu" handler="this"></div>
-        <div class="btn-group" ng-if="toolbar">
+        <div ui-menu-bar menus="toolbarAsMenu" handler="this" ng-if="toolbar" class="visible-phone"></div>
+        <div class="btn-group hidden-phone" ng-if="toolbar">
           <button ng-repeat="btn in toolbar | filter:{custom: true}" ui-tool-button></button>
         </div>
         <div class="btn-group" ng-if="toolbar" style="display: none;">
