--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -497,6 +497,11 @@ input[readonly], select[readonly], textarea[readonly] {
 	margin-top: 6px;
 }
 
+.record-toolbar .view-toolbar-mobile,
+.record-toolbar .view-menubar-mobile {
+	margin: 0;
+}
+
 @media (max-width: 767px) {
 	.menu-bar.visible-phone {
 		display: inline-block !important;
