--- a/axelor-web/src/main/webapp/partials/views/form.html
+++ b/axelor-web/src/main/webapp/partials/views/form.html
@@ -1,7 +1,7 @@
 <div class="form-view" ng-controller="FormViewCtrl" ui-tab-gate>
   <div class="navbar record-toolbar" ng-show="canShowToolbar()">
     <div class="navbar-inner">
-      <div class="container">
+      <div class="container" ui-toolbar-adjust>
         <div class="btn-group">
           <button class="btn" ng-click="onNew()" ng-if="canNew()" title="{{ 'New' | t}}">
             <i class="fa fa-plus"></i> <span ng-hide="tbTitleHide" x-translate>New</span>
@@ -24,14 +24,15 @@
           <button class="btn" ng-if="hasHelp()" ng-click="onShowHelp()"><i class="fa fa-info-circle"></i></button>
         </div>
         <div ui-menu-bar menus="toolmenu" handler="this"></div>
-        <div ui-menu-bar menus="toolbarAsMenu" handler="this" ng-if="toolbar" class="visible-phone"></div>
-        <div class="btn-group hidden-phone" ng-if="toolbar">
+        <div class="btn-group view-toolbar" ng-show="toolbar">
           <button ng-repeat="btn in toolbar | filter:{custom: true}" ui-tool-button></button>
         </div>
         <div class="btn-group" ng-if="toolbar" style="display: none;">
           <button ng-repeat="btn in toolbar | filter:{custom: false}" ui-tool-button></button>
         </div>
-        <div ui-menu-bar menus="menubar" handler="this"></div>
+        <div ui-menu-bar menus="menubar" handler="this" class="view-menubar"></div>
+        <div ui-menu-bar menus="toolbarAsMenu" handler="this" class='view-toolbar-mobile'></div>
+        <div ui-menu-bar menus="menubarAsMenu" handler="this" class='view-menubar-mobile'></div>
         <div ui-view-switcher class="pull-right"></div>
         <div ui-record-pager class="pull-right"></div>
       </div>
