--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -686,6 +686,14 @@ img.prefix-icon {
 	background: #eeeeee;
 }
 
+.record-toolbar .button-menu a.btn {
+	border-right-width: 0;
+}
+
+.record-toolbar .button-menu:last-child a.btn {
+	border-right-width: 1px;
+}
+
 .record-toolbar .menu-bar a.disabled {
 	color: #ccc;
 	cursor: default;
